--- a/elc2019.md
+++ b/elc2019.md
@@ -49,13 +49,13 @@ ToDo
 
 Schedule
 ---------
-* week 32: Checking converter maturity
-* week 33:
-* week 34:
-* week 35:
-* week 36:
-* week 37: SEP 19(WED): Present at Ericsson Developers Conference (EDC) internal
-* week 38:
+* ~~week 32: Checking converter maturity~~
+* ~~week 33:~~
+* ~~week 34:~~
+* ~~week 35:~~
+* ~~week 36:~~
+* ~~week 37: SEP 19(WED): Present at Ericsson Developers Conference (EDC) internal~~
+* ~~week 38:~~
 * week 39:
 * week 40: Taking data
 * week 41: Compiling slides
