update elc2019 schedule

--- a/elc2019.md
+++ b/elc2019.md
@@ -56,8 +56,8 @@ Schedule
 * ~~week 36:~~
 * ~~week 37: SEP 19(WED): Present at Ericsson Developers Conference (EDC) internal~~
 * ~~week 38:~~
-* week 39:
-* week 40: Taking data
+* ~~week 39:~~
+* ~~week 40: Taking data~~
 * week 41: Compiling slides
 * week 42: OCT 21(MON): Slides deadline
 * week 43: OCT 30(WED): ELC Europe Talk
