--- a/conf.org
+++ b/conf.org
@@ -2,20 +2,24 @@
 
 * TODO Which conference?
 Any suggestion?
+
 * TODO Split TinyMLaaS & LwAE?
-2 Topics included:
+  2 Topics included:
+
 ** Training
 - 100MB RAM / ??? MB storage
+
 *** Federate Learning (FL)
 - Based on homogeneous Parameter Server (PS)
-
 *** Lightweight Actor Engine (LwAE)
 *** MirageOS
 - Currently with read-only storage
 *** KVM
 - With tap devices
+
 ** Inference
 500KiB SRAM / 2MB FLASH ROM
+
 *** TensorFlow Lite for Micro (TFLM)
 ML compiler
 *** MirageOS
@@ -23,11 +27,12 @@ On the top of FreeRTOS
 *** ESP32
 - Xtensa 32bit MCU
 - Devkit costs $40
+
 * TODO What are missing?
+** Owl inference size
 ** Owl -> TF converter
-** Size Data
-*** LwAE
-*** ESP32
+** Owl -> TF converter
+** more size data?
 * TODO Worksplit, who does what?
 ** hiroshi
 *** TODO Publish slides repo
@@ -37,27 +42,29 @@ On the top of FreeRTOS
 
 ** roberto
 *** Write E/// blog based on ELC2019 slides
-    SCHEDULED: <2019-11-22 Fri>
-- 4 articles, to be published bi-weekly
- + Background
- + 3 prolems
-  + Edge
-  + Web vs Embedded
-  + ML environment
- + 3 enablers
- + Futher possibilities
-  + heterogeneous trainig/inference
-  + demo
+    SCHEDULED: <2019-11-15 Fri>
+**** 4 articles, to be published bi-weekly [0/4]
+ + [ ] Background
+ + [ ] 3 prolems
+   + Edge
+   + Web vs Embedded
+   + ML environment
+ + [ ] 3 enablers
+ + [ ] Futher possibilities
+   + heterogeneous trainig/inference
+   + demo
 
 ** jianxin
-Owl -> TF
-LwAE?
+- Owl -> TF
+- LwAE?
 ** liang
-Owl -> ONNX?
+- Owl -> ONNX?
 ** mort
-weekly review?
+- weekly review?
+* TODO How to collaborate?
+  Github limitation?
 * TODO Schedule
-Check weekly progress on slack on FRI?
+- Sync-up weekly progress on slack on FRI?
 * TODO Resources
 ** talk
 https://osseu19.sched.com/event/TLCJ
