--- a/conf.org
+++ b/conf.org
@@ -1,61 +1,69 @@
 #+TITLE: Conference Plan for TinyMLaaS
 #+AUTHOR: Hiroshi Doyu
 
-* Split TinyMLaaS into LwAE && TinyMLaaS
-  TinyMLaaS includes 2 topics
+* 2 topics
+  Need Valid usecase?
+  Comparison / Metrics
   1) LwAE
-     - PS on LwAE on MirageOS on KVM at ML training
-  2) TinyML as-a-Service
+     - PS on LwAE on MirageOS on KVM at ML "training"
+     - ???
+  2) TinyMLaaS
      - ML compiler && TFLM on MirageOS on ESP32 at ML inference
+     - Metrics
+
+  Usecase: A hight Quality camera vs multiple cheap cameras, communicating/retraining
 
 * What are missing?
   1) LwAE
      - Squeeze NN size? 100MB
-     - Owl inference on KVM
+     - How small is Owl inference on KVM?
   2) TinyMLaaS
      - Use Owl -> TF converter
-     - Owl inference on ESP32?
+     - Can Owl inference run on ESP32?
 
 * Which conference?
   Any suggestion?
-  1) ATC Jan 15th
-  2) Eurosys Nov 4th
-  3) OSDI
-  4) [[https://www.comsoc.org/publications/magazines/ieee-network/cfp/emerging-intelligent-systems-and-smart-computational][Emerging Intelligent Systems and Smart Computational Technologies for Future IoT]]
+  1) [[https://www.comsoc.org/publications/magazines/ieee-network/cfp/emerging-intelligent-systems-and-smart-computational][Emerging Intelligent Systems and Smart Computational Technologies for Future IoT]]
+  2) OSDI
 
 * Participants
+  If you can agree the plan:
   - [X] Hiroshi
   - [ ] Jianxin
-  - [ ] Roberto
-  - [ ] Joel
+  - [X] Roberto
+  - [X] Joel
   - [ ] Liang
-  - [ ] Mort
+  - [X] Mort
+  - [ ] Neil?
 
 * Worksplit
-  7.5H per day
+  7.5H per day / How much can you contribute?
   1) TinyMLaaS
      | name    | hours | OCaml | data | paper | role |
      |---------+-------+-------+------+-------+------|
      | Hiroshi |    15 | OK    | OK   | OK    | lead |
-     |         |       |       |      |       |      |
+     | Roberto |     6 |       | OK   | OK    |      |
 
   2) LwAE
      | name    | hours | OCaml | data | paper | role |
      |---------+-------+-------+------+-------+------|
      | Hiroshi |    15 | OK    | OK   | OK    | lead |
-     |         |       |       |      |       |      |
+     | Joel    |    15 | ?     | OK   | OK    |      |
 
 * How to collaborate?
-  - public gitlab?
+  - github or gitlab?
   - [[http://plantuml.com/][plantuml]]
-  - slack, nsdi or email?
+  - slack nsdi channel or email?
 
 * Action
   - Hiroshi
     1) Docker Devkit for LwAE
     2) Docker Devkit for TinyMLaaS
-    3) Publish them on public gitlab
+    3) Publish them on github
     4) Scheudle next sync-up on 13th Dec
     5) Away 4 weeks during Xmas && new year
   - All
-    1) Verify devkit
+    1) Verify devkit by 13th Dec
+
+* AOB
+  - ML compiler && AI chip with [[https://inverseprobability.com/talks/notes/machine-learning-systems-design-cambridge-ai-group-seminar.html][Neil Lawrence]]?
