--- a/5grbs.org
+++ b/5grbs.org
@@ -3,66 +3,87 @@
 #+EMAIL: hiroshi.doyu@ericsson.com
 
 * What's TinyML?
-Emerging concept(and community) to run ML inferences on ultra low-power microcontroller(<< 1mA),
-where Linux cannot fit to run.
+TinyML (Tiny Machine Learning) is an emerging concept(and also community)
+to run Machine Learning (ML) inferences on Ultra Low-Power (ULP) microcontrollers(<< 1mA), where Linux cannot fit to run.
+It's not a specific implementation but general concept.
+For example, Google's "TensorFlow Lite for micro" is one implementation of ML compiler to enable TinyML for several microcontrollers,
+although it's not highly optimized but it's originally meant generally to lower the barrier to enter.
+Usually every AI chip(HWA) vendor provides a specialized ML compiler to enable (Tiny)ML to run on their AI chip(HWA).
+Embedded GPU (Nvidia Tegra) could be considered as one general purpose AI chip(HWA).
 
 [[./images/venn1.png][TinyML?]]
 
-** references
-- Eericsson Blog
+** References
+- Ericsson Blog
 - TinyML community
 - TinyML book
+- TinyMLaaS internal [[TBD][talk]] && [[TBD][slides]]
 
 * What's TinyMLaaS?
-- TinyML as-a-Service (TinyMLaaS) is a cloud service to build and orchestrate ML inference onto microcontrollers.
-- TinyMLaaS accomodates multiple ML compilers as its backend.
-- TinyMLaaS core / frontend is API server to handle model, backend and gateway (GW).
-- Which ML inference to be installed can be specified via API.
-- ML inferences running on a device can be replaced / updated.
-- ML compiler/AI chip vendors can provide a docker image to build a full OS image (FOTA).
- - Inference module interface should be standardized.
-- ML compiler/AI chip vendors can provide a docker image to build ML inference module (SOTA).
- - Inference module interface can be proprietary.
-- TinyMLaaS internal talk && slides
-
-[[./images/ecosystem_017.png][TinyML as-a-Service ecosystem]]
-
-** 3 standard interfaces to specify
-To support multiple backends, the following interfaces should be standardized.
+TinyML as-a-Service (TinyMLaaS) is our invention to accelerate TinyML adaption in unified manner.
+- TinyMLaaS is a cloud service to build and orchestrate ML inference onto microcontrollers.
+- It's assumed that pre-trained models are stored in Model Zoo in Cloud.
+- Pre-trained models cannot be directly downloaded onto microcontrollers.
+- Pre-trained models should be compiled by ML compiler to run on microcontrollers later.
+- TinyMLaaS accommodates multiple ML compilers as its backend.
+- TinyMLaaS backend is composed of ML compiler, and optional OS builder if FOTA.
+ - FOTA (Firmware Over The Air) update is a full OS flashing.
+ - SOTA (Software Over The Air) update is a partial update, one component of SW stack.
+- TinyMLaaS core(frontend) is REST API server to handle:
+ - ML inference model, stored in Model Zoo
+ - Backend: ML compiler + optional OS builder
+ - Gateway (GW): device management server
+- WebApp (GUI) can be implemented by calling those APIs.
+- Which ML inference to be installed can be specified via API parameter.
+- ML inferences running on a device can be replaced / updated via API.
+- ML compiler(+AI chip?) vendors should provide a docker container image to build ML inference module (SOTA).
+ - ML inference module interface (IMI) doesn't matter since it's a full OS update.
+- ML compiler(+AI chip?) vendors should provide a docker container image to build a full OS image (FOTA).
+ - ML inference module interface should be standardized to deal with different OSes.
 
 [[./images/arch.png]]
 
+** 3 standard interfaces to specify
+In order to support multiple backends,
+the following interfaces should be standardized during this development.
+
 *** Backend plugin interface
-- Backend implementation is a build system for ML inference (SOTA)
-- Backend implementation is a build system for ML inference and OS (FOTA)
-- Backend implementation is a form of docker container.
+- Backend implementation is a build system for ML inference for AI chip in use.
+- Backend implementation may additionally include a OS build system (OS builder) in case of FOTA.
+- Backend implementation is implemented as a form of docker container image.
+- This docker container is standalone to run to generate ML inference and/or OS image independently.
 - Which ML inference in use is specified by runtime argument of docker container.
-- docker container image is stored in docker hub.
-- docker container is called via API.
-- docker container is downloaded from docker hub.
-- docker container is run on TinyMLaaS server node.
-- docker container generates output image.
+ - It's an URL of ML model Zoo.
+- This implemented docker container image is stored in docker Hub.
+- This docker container is downloaded from docker Hub and run later.
+- This docker container is called via API server to be download and run later.
+- This docker container is to run on TinyMLaaS server node.
+- This docker container generates output image.
+ - ML inference module (SOTA), or alternatively
+ - OS image, which includes a ML inference module (FOTA)
+- A generated output image is installed onto microcontrollers.
+- This can be SOTA or FOTA.
 
 [[./images/standard_001.png][Backend plugin interface]]
 
 *** ML inference orchestration
-- Constraint IoT devices use OMA LwM2M for device management.
+- Constraint IoT devices use OMA LwM2M for device management, for example.
 - OMA LwM2M has SOTA and FOTA, which can be used for ML inference orchestration, out-of-box.
 - Non LwM2M device can use their own FOTA or SOTA if any.
 
 [[./images/arch_002.png]]
 
-- Alternatively, LwM2M client can be inserted right before Non LwM2M device just for flashing.
+- Alternatively, LwM2M client can be inserted right before Non LwM2M device just for image flashing.
 
 [[./images/arch_004.png][Workaround with LwM2M]]
 
 [[./images/standard_002.png][ML inference orchestration]]
 
 *** ML inference module format
-While FOTA doesn't care about this format at all since it doesn a full OS flashing,
-this format is needed to standardized for SOTA,
+While FOTA doesn't care about this ML inference module format at all since it doesn't flash a full OS image,
+this format is needed to be standardized in case of SOTA,
 where a ML inference module is updated partially,
-being independely of any OS in use.
+being independently of any OS in use.
 
 [[./images/arch_003.png]]
 
@@ -70,45 +91,49 @@ being independely of any OS in use.
 
 * What TinyMLaaS provides?
 TinyMLaaS is an API server.
-Its GUI frontend can be implemented by dealing with those API calls.
+Its GUI frontend can be implemented by dealing with those API calls comprehensively.
 Here's some proposal of API calls per target object.
 
 ** Backend
-ML compiler / OS builder
-- POST: register
-- GET: list
-- GET: builder info
-- DELETE: unregister
+It's almost to run docker image of ML compiler(+OS builder), provided by partner.
+This docker image is to run independently with some command line argument passed to "docker run".
+- POST: register a new backend
+- GET: list all registered backend
+- GET: get backend info: {name,CPU,device OS, FOTA/SOTA}
+- DELETE: unregister a backend
 - POST: build an inference module or OS image
 
 ** Gateway
-GW == management server of devices if any
-- POST: register a GW with DNS
+TinyML itself doesn't manage devices but makes use of device management server (gateway: GW).
+For now this just follows LwM2M management server with its REST API.
+This interface may depend on implementation.
+- POST: register a new GW with its DNS
 - GET: list GWs
-- GET: GW info
-- DELETE: a GW
+- GET: GW info: URL?
+- DELETE: a registered GW
 
 ** Device
-Devices to install ML inference.
+Target devices to install ML inference.
 Do we really want to manage devices directly from TinyMLaaS without GW?
 - GET: list devices
-- GET: device info
+- GET: device info: {CPU, RAM, ROM, network bandwidth}
 - POST: SOTA or FOTA
 
 ** Model
-Model to be installed onto devices
-- POST: register a model with URL
+ML inference model, stored in Model Zoo, to be installed onto devices
+- POST: register a new model with URL
 - GET: list models
+- GET: model info: {size,summary,???}
 - DELETE: unregister a model
 
-* What backend provovides?
-There are 2 options, SOTA or FOTA.
+* What backend need to provide?
+It's a stand alone docker container image to build ML inference module (SOTA) and OS optionally (FOTA).
 
 ** SOTA protocol
-- Software Over The Air update, partical update.
+- Software Over The Air update, partial update.
  - Update ML inference module in this case.
 - LwM2M SOTA equivalent protocol if not using LwM2M
-- OS should be able to update ML inference in use.
+- OS should be able to update only ML inference in use.
 
 ** FOTA protocol
 - Firmware Over The Air update, Full OS update
@@ -123,13 +148,15 @@ We also try to opensource TinyMLaaS via LinuxFondation AI incubation project in 
 
 ** Hiroshi
 - Schedule a meeting early JAN
- - Discuss docker calling parameters, REST API params.
- - ex: model name, OS, CPU, RAM, ROM, bandwidth, e.t.c
- - Whom to invite?
+ - Discuss docker calling parameters (=REST API parameters).
+ - ex: model name, OS, CPU, RAM, ROM, network bandwidth, e.t.c
+ - Whom to invite in the meeting?
 
-** 5G RBS
-- Brief EMCA / Flex
+** 5G RBS?
+- Brief EMCA / Flex to check feasibility
 - SOTA(partial Software Update) for inference module?
  - FOTA if not SOTA, alternatively
-- Dockerfile for build image (SOTA or FOTA)
+- Dockerfile for build {ML inference,OS} image (SOTA or FOTA)
 - Agree on REST API
+
+Any questions?
