2020q1demo: update title

--- a/2020q1demo.md
+++ b/2020q1demo.md
@@ -1,8 +1,5 @@
 class: center, middle
-# TinyML as-a-Service
-## for 2020Q1 demo
- -----
-13th JAN 2020
+background-image: url(images/2020q1demo.png)
 .center[.footnote[Hiroshi Doyu[&lt;hiroshi.doyu@ericsson.com&gt;](hiroshi.doyu@ericsson.com)]]
 
 ---
@@ -51,12 +48,12 @@ background-image: url(images/standard-mindmap.png)
 
 ---
 class: middle
-# E/// will provide:
+# E/// provides:
 - API server to command docker to:
  - build an OS image with a specified inference
  - install an OS image onto a specificed device
 
-# Partner
+# Partner provides:
 - docker image
  - to build an OS image with a specified inference
 - device OS may need to include LwM2M client for FOTA
