--- a/2020q1demo.md
+++ b/2020q1demo.md
@@ -1,73 +1,5 @@
-class: center, middle
 background-image: url(images/2020q1demo.png)
-.center[.footnote[Hiroshi Doyu[&lt;hiroshi.doyu@ericsson.com&gt;](hiroshi.doyu@ericsson.com)]]
+# **TinyML as-a-Service**
+.footnote[**TinyMLaaS**: Bring ML onto microcontrollers at Deepest IoT Edge]
 
----
-class: middle
-# Purpose
-- Will show **TinyMLaaS** PoC for E/// higher management,
-- as input of our insight for the future direction IoT business,
- - where SMEs could start their AI business easily with IoT devices,
-- by the end of 2020Q1
-- Also 5G Radio Base Station is interested in TinyMLaaS,
- - for their constraint HW environment
 
----
-class: middle
-# TinyML
-- DNN inference running on microcontroller,
-- on non-linux environment(ex: FreeRTOS),
-- can be battery powered
-- ML compiler generates a small inference with:
- - Fuse
- - Quantization
- - Prune
- - Adjusting accuracy....
-
----
-class: middle
-# TinyML as-a-Service (TinyMLaaS)
-- TinyML **orchestration**
- - swap inferences **on demand**
-- Build service
- - ML compiler per AI chip
-- OMA LwM2M
- - IoT device management protocol
-- OMA LwM2M: Software Over The Air update (SOTA) or
- - partial update
-- OMA LwM2M: Firmware Over The Air update (FOTA)
- - full OS update
----
-background-image: url(images/arch.png)
----
-background-image: url(images/api-server.png)
-
-.footnote[https://petstore.swagger.io/#/]
----
-background-image: url(images/standard-mindmap.png)
-
----
-class: middle
-# E/// provides:
-- API server to command docker to:
- - build an OS image with a specified inference
- - install an OS image onto a specificed device
-
-# Partner provides:
-- docker image
- - to build an OS image with a specified inference
-- device OS may need to include LwM2M client for FOTA
-
-.footnote[With Docker, we could develop {front,back}end independently.]
----
-class: middle
-# Any existing usable demo?
-- swap inferences on demand
-
----
-class: middle
-# Next
-To define which existing demo to use
-
----
-background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Ericsson_logo.svg/500px-Ericsson_logo.svg.png)
