--- a/2020q1demo.md
+++ b/2020q1demo.md
@@ -1,5 +1,5 @@
 background-image: url(images/2020q1demo.png)
 # **TinyML as-a-Service**
-.footnote[**TinyMLaaS**: Bring ML onto microcontrollers at Deepest IoT Edge]
+https://pbs.twimg.com/media/EPjEYzfU0AARYC9.png.footnote[**TinyMLaaS**: Bring ML onto [microcontrollers]() at Deepest IoT Edge with [LwM2M]()]
 
 
