--- a/tinymlaas1a-ja.org
+++ b/tinymlaas1a-ja.org
@@ -109,11 +109,11 @@ belongs to "Edge computing". Here's one question, why Edge computing
 cannot solve all problems as "serving" for IoT devices?
 
 We see five areas, which Edge computing may not be solving completely yet.
-(1) data privacy
-(2) network latency
-(3) network bandwidth
-(4) network reliability
-(5) power consumption
+1. data privacy
+2. network latency
+3. network bandwidth
+4. network reliability
+5. power consumption
 The detail of those 5 points are explained [[https://www.ericsson.com/en/blog/2019/12/tinyml-as-a-service][here]].
 
 If we see TinyML as local processing of ML inference, TinyML could
@@ -133,7 +133,7 @@ it's done on variety of micro-controllers, variety of Real Time
 Operating Systems(RTOS), with 512 Kilobyte of SRAM, a few Megabyte of
 flash memory, without any standard orchestration. Those development
 environment is totally different. We cannot migrate Cloud service onto
-IoT devices.
+IoT devices. This is described in Figure 2.
 
 [[./images/webvsembedded.png][Figure 2: Web vs Embedded]]
 
@@ -146,9 +146,11 @@ latest introduction of ONNX (Open Neural Network eXchange format),
 each ML framework can make use of a model, trained on other framework
 easily. But this cannot be applied to Embedded IoT. Any of those
 frameworks and models are too big to run on IoT devices.
+This is described in Figure 3.
 
-[[./images/mlwebvsembedded.png][Web vs Embedded in ML]]
+[[./images/mlwebvsembedded.png][Figure 3: Web vs Embedded in ML]]
 
+The above problems are explained in Ericsson Blog [[https://www.ericsson.com/en/blog/2019/12/tinyml-as-a-service-iot-edge][article]].
 To tackle the above problems, we propose "TinyML as-a-Service",
 explained in the following chapter.
 
@@ -187,6 +189,8 @@ locally on devices, without much help from Edge computing.
 
 [[./images/ecosystem_017.png][TinyMLaaS ecosystem]]
 
+TinyMLaaS is explained on Ericsson Blog [[https://www.ericsson.com/en/blog/2020/2/how-can-we-democratize-machine-learning-iot-devices][article]].
+
 * Conclusion
 The TinyML community has evolved a lot during the last year. TinyMLaaS
 is an ecosystem around TinyML. Ecosystem players, like chip vendors,
@@ -194,3 +198,11 @@ compiler companies, service providers etc. have an opportunity to both
 influence and accelerate the development of the ecosystem. Here at
 Ericsson, we very much encourage and invite this level of
 cross-industry collaboration.
+* References
++ [[https://www.ericsson.com/en/blog/2019/12/tinyml-as-a-service-iot-edge][Ericsson Blog(1/3): TinyML as-a-Service at the IoT Edge]]
++ [[https://www.ericsson.com/en/blog/2019/12/tinyml-as-a-service][Ericsson Blog(2/3): TinyML as-a-Service and the challenges of machine learning at the edge]]
++ [[https://www.ericsson.com/en/blog/2020/2/how-can-we-democratize-machine-learning-iot-devices][Ericsson Blog(3/3): How can we democratize machine learning on IoT devices?]]
++ [[https://osseu19.sched.com/event/TLCJ][TinyML as-a-Service at Embedded Linux Conference 2019]]
++ [[https://www.amazon.com/TinyML-Learning-TensorFlow-Ultra-Low-Power-Microcontrollers/dp/1492052043][TinyML: Machine Learning with TensorFlow Lite on Arduino and Ultra-Low-Power Microcontrollers]]
++ [[https://tinymlsummit.org/][tinyML Summit 2020]]
++ [[https://www.meetup.com/tinyML-Enabling-ultra-low-Power-ML-at-the-Edge/][tinyML Meetup]]
